docs/v0.8.0/_sources/how_to/tune_with_autoscheduler/index.rst.txt
:orphan:



.. _sphx_glr_how_to_tune_with_autoscheduler:

Use AutoScheduler for Template-Free Scheduling
----------------------------------------------

The TVM AutoScheduler offers a template-free way to tune models. These how-tos
demonstrate how to tune a variety of different models to target a number of
common platforms.



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a tutorial on how to use the auto-scheduler for GPUs.">

.. only:: html

    .. figure:: /how_to/tune_with_autoscheduler/images/thumb/sphx_glr_tune_conv2d_layer_cuda_thumb.png

        :ref:`sphx_glr_how_to_tune_with_autoscheduler_tune_conv2d_layer_cuda.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/tune_with_autoscheduler/tune_conv2d_layer_cuda

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Auto-tuning for specific devices and workloads is critical for getting the best performance. Th...">

.. only:: html

    .. figure:: /how_to/tune_with_autoscheduler/images/thumb/sphx_glr_tune_network_x86_thumb.png

        :ref:`sphx_glr_how_to_tune_with_autoscheduler_tune_network_x86.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/tune_with_autoscheduler/tune_network_x86

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Auto-tuning for specific devices and workloads is critical for getting the best performance. Th...">

.. only:: html

    .. figure:: /how_to/tune_with_autoscheduler/images/thumb/sphx_glr_tune_network_cuda_thumb.png

        :ref:`sphx_glr_how_to_tune_with_autoscheduler_tune_network_cuda.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/tune_with_autoscheduler/tune_network_cuda

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Auto-tuning for specific devices and workloads is critical for getting the best performance. Th...">

.. only:: html

    .. figure:: /how_to/tune_with_autoscheduler/images/thumb/sphx_glr_tune_network_arm_thumb.png

        :ref:`sphx_glr_how_to_tune_with_autoscheduler_tune_network_arm.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/tune_with_autoscheduler/tune_network_arm

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Auto-tuning for specific devices and workloads is critical for getting the best performance. Th...">

.. only:: html

    .. figure:: /how_to/tune_with_autoscheduler/images/thumb/sphx_glr_tune_network_mali_thumb.png

        :ref:`sphx_glr_how_to_tune_with_autoscheduler_tune_network_mali.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/tune_with_autoscheduler/tune_network_mali

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a tutorial on how to use the auto-scheduler to tune a sparse matrix multiplication for ...">

.. only:: html

    .. figure:: /how_to/tune_with_autoscheduler/images/thumb/sphx_glr_tune_sparse_x86_thumb.png

        :ref:`sphx_glr_how_to_tune_with_autoscheduler_tune_sparse_x86.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/tune_with_autoscheduler/tune_sparse_x86
.. raw:: html

    <div style='clear:both'></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
