docs/v0.15.0/_sources/how_to/tune_with_autoscheduler/index.rst.txt
:orphan:

Use AutoScheduler for Template-Free Scheduling
----------------------------------------------

The TVM AutoScheduler offers a template-free way to tune models. These how-tos
demonstrate how to tune a variety of different models to target a number of
common platforms.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a tutorial on how to use the auto-scheduler for GPUs.">

.. only:: html

  .. image:: /how_to/tune_with_autoscheduler/images/thumb/sphx_glr_tune_conv2d_layer_cuda_thumb.png
    :alt: Auto-scheduling a Convolution Layer for GPU

  :ref:`sphx_glr_how_to_tune_with_autoscheduler_tune_conv2d_layer_cuda.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Auto-scheduling a Convolution Layer for GPU</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Auto-tuning for specific devices and workloads is critical for getting the best performance. Th...">

.. only:: html

  .. image:: /how_to/tune_with_autoscheduler/images/thumb/sphx_glr_tune_network_x86_thumb.png
    :alt: Auto-scheduling a Neural Network for x86 CPU

  :ref:`sphx_glr_how_to_tune_with_autoscheduler_tune_network_x86.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Auto-scheduling a Neural Network for x86 CPU</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Auto-tuning for specific devices and workloads is critical for getting the best performance. Th...">

.. only:: html

  .. image:: /how_to/tune_with_autoscheduler/images/thumb/sphx_glr_tune_network_cuda_thumb.png
    :alt: Auto-scheduling a Neural Network for NVIDIA GPU

  :ref:`sphx_glr_how_to_tune_with_autoscheduler_tune_network_cuda.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Auto-scheduling a Neural Network for NVIDIA GPU</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Auto-tuning for specific devices and workloads is critical for getting the best performance. Th...">

.. only:: html

  .. image:: /how_to/tune_with_autoscheduler/images/thumb/sphx_glr_tune_network_arm_thumb.png
    :alt: Auto-scheduling a Neural Network for ARM CPU

  :ref:`sphx_glr_how_to_tune_with_autoscheduler_tune_network_arm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Auto-scheduling a Neural Network for ARM CPU</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Auto-tuning for specific devices and workloads is critical for getting the best performance. Th...">

.. only:: html

  .. image:: /how_to/tune_with_autoscheduler/images/thumb/sphx_glr_tune_network_mali_thumb.png
    :alt: Auto-scheduling a Neural Network for mali GPU

  :ref:`sphx_glr_how_to_tune_with_autoscheduler_tune_network_mali.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Auto-scheduling a Neural Network for mali GPU</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a tutorial on how to use the auto-scheduler to tune a sparse matrix multiplication for ...">

.. only:: html

  .. image:: /how_to/tune_with_autoscheduler/images/thumb/sphx_glr_tune_sparse_x86_thumb.png
    :alt: Auto-scheduling Sparse Matrix Multiplication on CPU with Custom Sketch Rule

  :ref:`sphx_glr_how_to_tune_with_autoscheduler_tune_sparse_x86.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Auto-scheduling Sparse Matrix Multiplication on CPU with Custom Sketch Rule</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/tune_with_autoscheduler/tune_conv2d_layer_cuda
   /how_to/tune_with_autoscheduler/tune_network_x86
   /how_to/tune_with_autoscheduler/tune_network_cuda
   /how_to/tune_with_autoscheduler/tune_network_arm
   /how_to/tune_with_autoscheduler/tune_network_mali
   /how_to/tune_with_autoscheduler/tune_sparse_x86



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
